# system

./: .drone.jsonnet  .drone.star  .travis.yml  CMakeLists.txt  appveyor.yml  build.jam
.drone/: drone.bat  drone.sh
.github/workflows/: ci.yml
doc/: index.html  reference.html  system.adoc
doc/system/: acknowledgements.adoc  changes.adoc  history.adoc  introduction.adoc  rationale.adoc  reference.adoc  usage.adoc
extra/: boost_system.natvis
include/boost/system/: api_config.hpp  config.hpp  errc.hpp  error_code.hpp  result.hpp  system_error.hpp  unwrap_and_invoke.hpp  windows_error.hpp
meta/: hello.cpp  libraries.json
src/: error_code.cpp
test/: CMakeLists.txt  Jamfile.v2  after_main_test.cpp  after_main_test_1.cpp  after_main_test_2.cpp  constexpr_test.cpp  detail_is_aggregate_test.cpp  dynamic_link_test.cpp  ec_location_test5.cpp  ec_what_test.cpp  errc_test.cpp  errc_test3.cpp  error_category_test.cpp  error_category_test2.cpp  error_code_test.cpp  error_code_test2.cpp  error_code_test3.cpp  error_code_user_test.cpp  error_condition_test3.cpp  failed_constexpr_test.cpp  failed_test.cpp  generic_category_test.cpp  generic_category_test2.cpp  generic_category_test3.cpp  initialization_test.cpp  result_and_fn1r.cpp  result_and_fn1v.cpp  result_and_mfn1r.cpp  result_and_mfn1v.cpp  result_convert_construct.cpp  result_copy_assign.cpp  result_copy_construct.cpp  result_default_construct.cpp  result_eq.cpp  result_error_access.cpp  result_error_construct.cpp  result_error_construct_cx.cpp  result_error_move.cpp  result_in_place_use.cpp  result_move_assign.cpp  (+42 more)
test/cmake_install_test/: CMakeLists.txt
test/cmake_subdir_test/: CMakeLists.txt
test/msvc/: system.sln
test/system/: system.sln
(+25 files in other folders)
